--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
 <head>
 <base href="/SASP/">
-<link rel="stylesheet" type="text/css" href="base.css" />
-<link rel="stylesheet" type="text/css" href="content.css" />
-<link rel="stylesheet" type="text/css" href="nav.css" />
+<link rel="stylesheet" type="text/css" href="./base.css" />
+<link rel="stylesheet" type="text/css" href="./content.css" />
+<link rel="stylesheet" type="text/css" href="./nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
 <title>Sostenibilidad Aplicada a Sectores Productivos </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
