--- a/ejemplo_prctico.html
+++ b/ejemplo_prctico.html
@@ -22,49 +22,49 @@
 <header id="header" ><div id="headerContent">Sostenibilidad Aplicada a Sectores Productivos</div></header>
 <nav id="siteNav">
 <ul>
-   <li><a href="index.html" class="daddy main-node">Sostenibilidad Aplicada a Sectores Productivos</a></li>
-   <li class="current-page-parent"><a href="unidad_trabajo_1.html" class="current-page-parent daddy">UNIDAD TRABAJO 1</a>
+   <li><a href="./index.html" class="daddy main-node">Sostenibilidad Aplicada a Sectores Productivos</a></li>
+   <li class="current-page-parent"><a href="./unidad_trabajo_1.html" class="current-page-parent daddy">UNIDAD TRABAJO 1</a>
    <ul>
-      <li><a href="0_introduccin.html" class="no-ch">0. Introducción</a></li>
-      <li class="current-page-parent"><a href="1_la_sostenibilidad_y_el_desarrollo_sostenible.html" class="current-page-parent daddy">1. La Sostenibilidad y el Desarrollo Sostenible</a>
+      <li><a href="./0_introduccin.html" class="no-ch">0. Introducción</a></li>
+      <li class="current-page-parent"><a href="./1_la_sostenibilidad_y_el_desarrollo_sostenible.html" class="current-page-parent daddy">1. La Sostenibilidad y el Desarrollo Sostenible</a>
       <ul>
-         <li><a href="11_el_desarrollo_sostenible.html" class="no-ch">1.1. El desarrollo sostenible</a></li>
-         <li><a href="12_marcos_internacionales.html" class="no-ch">1.2. Marcos internacionales</a></li>
-         <li><a href="13_los_objetivos_de_desarrollo_sostenible_ods.html" class="no-ch">1.3. Los Objetivos de Desarrollo Sostenible (ODS)</a></li>
-         <li id="active"><a href="ejemplo_prctico.html" class="active no-ch">Ejemplo Práctico</a></li>
+         <li><a href="./11_el_desarrollo_sostenible.html" class="no-ch">1.1. El desarrollo sostenible</a></li>
+         <li><a href="./12_marcos_internacionales.html" class="no-ch">1.2. Marcos internacionales</a></li>
+         <li><a href="./13_los_objetivos_de_desarrollo_sostenible_ods.html" class="no-ch">1.3. Los Objetivos de Desarrollo Sostenible (ODS)</a></li>
+         <li id="active"><a href="./ejemplo_prctico.html" class="active no-ch">Ejemplo Práctico</a></li>
       </ul>
       </li>
-      <li><a href="2_el_fomento_de_la_sostenibilidad.html" class="daddy">2. El Fomento de la Sostenibilidad</a>
+      <li><a href="./2_el_fomento_de_la_sostenibilidad.html" class="daddy">2. El Fomento de la Sostenibilidad</a>
       <ul class="other-section">
-         <li><a href="21_inversin_socialmente_responsable_isr.html" class="no-ch">2.1. Inversión socialmente responsable (ISR)</a></li>
-         <li><a href="22_criterios_asg_ambientales_sociales_y_de_gobernanza.html" class="no-ch">2.2. Criterios ASG (Ambientales, Sociales y de Gobernanza)</a></li>
-         <li><a href="23_informacin_para_la_isr.html" class="no-ch">2.3. Información para la ISR</a></li>
+         <li><a href="./21_inversin_socialmente_responsable_isr.html" class="no-ch">2.1. Inversión socialmente responsable (ISR)</a></li>
+         <li><a href="./22_criterios_asg_ambientales_sociales_y_de_gobernanza.html" class="no-ch">2.2. Criterios ASG (Ambientales, Sociales y de Gobernanza)</a></li>
+         <li><a href="./23_informacin_para_la_isr.html" class="no-ch">2.3. Información para la ISR</a></li>
       </ul>
       </li>
-      <li><a href="3_el_desarrollo_sostenible_de_las_organizaciones_empresariales.html" class="daddy">3. El Desarrollo Sostenible de las Organizaciones Empresariales</a>
+      <li><a href="./3_el_desarrollo_sostenible_de_las_organizaciones_empresariales.html" class="daddy">3. El Desarrollo Sostenible de las Organizaciones Empresariales</a>
       <ul class="other-section">
-         <li><a href="31_las_empresas_ante_las_demandas_de_sostenibilidad.html" class="no-ch">3.1. Las empresas ante las demandas de sostenibilidad</a></li>
-         <li><a href="32_la_responsabilidad_social_corporativa_rsc.html" class="no-ch">3.2. La responsabilidad social corporativa (RSC)</a></li>
-         <li><a href="33_los_grupos_de_inters_stakeholders.html" class="no-ch">3.3. Los grupos de interés (stakeholders)</a></li>
-         <li><a href="34_riesgos_y_oportunidades_de_sostenibilidad.html" class="no-ch">3.4. Riesgos y oportunidades de sostenibilidad</a></li>
-         <li><a href="ejemplo_prctico0.html" class="no-ch">Ejemplo Práctico</a></li>
+         <li><a href="./31_las_empresas_ante_las_demandas_de_sostenibilidad.html" class="no-ch">3.1. Las empresas ante las demandas de sostenibilidad</a></li>
+         <li><a href="./32_la_responsabilidad_social_corporativa_rsc.html" class="no-ch">3.2. La responsabilidad social corporativa (RSC)</a></li>
+         <li><a href="./33_los_grupos_de_inters_stakeholders.html" class="no-ch">3.3. Los grupos de interés (stakeholders)</a></li>
+         <li><a href="./34_riesgos_y_oportunidades_de_sostenibilidad.html" class="no-ch">3.4. Riesgos y oportunidades de sostenibilidad</a></li>
+         <li><a href="./ejemplo_prctico0.html" class="no-ch">Ejemplo Práctico</a></li>
       </ul>
       </li>
-      <li><a href="4_evaluacin_del_desempeo_en_sostenibilidad.html" class="daddy">4. Evaluación del Desempeño en Sostenibilidad</a>
+      <li><a href="./4_evaluacin_del_desempeo_en_sostenibilidad.html" class="daddy">4. Evaluación del Desempeño en Sostenibilidad</a>
       <ul class="other-section">
-         <li><a href="41_indicadores_de_sostenibilidad_kpi.html" class="no-ch">4.1. Indicadores de sostenibilidad (KPI)</a></li>
-         <li><a href="42_estndares_de_mtrica_de_sostenibilidad.html" class="no-ch">4.2. Estándares de métrica de sostenibilidad</a></li>
-         <li><a href="43_publicacin_de_resultados.html" class="no-ch">4.3. Publicación de resultados</a></li>
+         <li><a href="./41_indicadores_de_sostenibilidad_kpi.html" class="no-ch">4.1. Indicadores de sostenibilidad (KPI)</a></li>
+         <li><a href="./42_estndares_de_mtrica_de_sostenibilidad.html" class="no-ch">4.2. Estándares de métrica de sostenibilidad</a></li>
+         <li><a href="./43_publicacin_de_resultados.html" class="no-ch">4.3. Publicación de resultados</a></li>
       </ul>
       </li>
-      <li><a href="resumen_y_conclusin.html" class="no-ch">Resumen y Conclusión</a></li>
+      <li><a href="./resumen_y_conclusin.html" class="no-ch">Resumen y Conclusión</a></li>
    </ul>
    </li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="13_los_objetivos_de_desarrollo_sostenible_ods.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>8</strong> de <strong>23</strong></span> <span class="sep">| </span><a href="2_el_fomento_de_la_sostenibilidad.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="./13_los_objetivos_de_desarrollo_sostenible_ods.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>8</strong> de <strong>23</strong></span> <span class="sep">| </span><a href="2_el_fomento_de_la_sostenibilidad.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
@@ -90,7 +90,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="13_los_objetivos_de_desarrollo_sostenible_ods.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>8</strong> de <strong>23</strong></span> <span class="sep">| </span><a href="2_el_fomento_de_la_sostenibilidad.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="./13_los_objetivos_de_desarrollo_sostenible_ods.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><span class="page-counter">Página <strong>8</strong> de <strong>23</strong></span> <span class="sep">| </span><a href="./2_el_fomento_de_la_sostenibilidad.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 </div>
