--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="es">
 <head>
+<base href="/SASP/">
 <!-- Cambiar referencias CSS -->
 <link rel="stylesheet" type="text/css" href="./base.css" />
 <link rel="stylesheet" type="text/css" href="./content.css" />
