Corregido el error de la ruta relativa y fondo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="es">
 <head>
-<base href=".//SASP/">
+<base href="/SASP/">
 <!-- Cambiar referencias CSS -->
 <link rel="stylesheet" type="text/css" href="./base.css" />
 <link rel="stylesheet" type="text/css" href="./content.css" />
