Corregido el error de la ruta relativa y fondo

--- a/23_informacin_para_la_isr.html
+++ b/23_informacin_para_la_isr.html
@@ -18,7 +18,7 @@
 </head>
 <body class="exe-web-site" id="exe-node-44"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
-<p id="skipNav"><a href="./#main" class="sr-av">Saltar la navegación</a></p>
+<p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
 <header id="header" ><div id="headerContent">Sostenibilidad Aplicada a Sectores Productivos</div></header>
 <nav id="siteNav">
 <ul>
