--- a/index.html
+++ b/index.html
@@ -93,4 +93,4 @@
 </nav>
 </div>
 </div>
-<p id="made-with-eXe"><a href="https://exelearning.net/" target="_blank" rel="noopener"><span>Creado con eXeLearning</span><span> (Ventana nueva)</span></a></p><script src="https://albesancrive.github.io/SASP/_adl_js.js"></script></body></html>
+<p id="made-with-eXe"><a href="https://exelearning.net/" target="_blank" rel="noopener"><span>Creado con eXeLearning</span><span> (Ventana nueva)</span></a></p><script src="./_adl_js.js"></script></body></html>
